...
            ///////////////////////////////////////////////////////////////////
            qViewModel.logOut();
         }

         FullSizedAllCenteredColumn()
         {
            Text("Logout Successful.", modifier = Modifier.padding(bottom = 16.dp))

            Button(onClick = { qViewModel.requestLogin() })
            {
               Text("Log back in")
            }
         }
      }

      else ->
      {
...
