...

   TopAppBar(
      colors = TopAppBarDefaults.topAppBarColors(
         containerColor = MaterialTheme.colorScheme.primaryContainer,
         titleContentColor = MaterialTheme.colorScheme.primary,
      ),
      title = { Text(title, maxLines = 1, overflow = TextOverflow.Ellipsis, modifier = Modifier.testTag("topAppBar.title")) },
      navigationIcon =
      {
         /////////////////////////////////////////////////////////
         // this was for the left-menu - but - not using today! //
         /////////////////////////////////////////////////////////
         // navMenuCallback?.let()
...
         {
            Text(it)
         }

         IconButton(onClick = { isMenuDialogOpen.value = true }, modifier = Modifier
            .focusProperties { canFocus = false }
            .testTag("topBar.menuIcon"))
         {
            Icon(imageVector = Icons.Default.Menu, contentDescription = "Information")
         }
      }
   )

...
