...
      }

      is FullyAnonymousAuthenticationMetaData ->
      {
         FullSizedAllCenteredColumn()
         {
            Text("Click to log in Anonymously:", modifier = Modifier.padding(bottom = 16.dp))

            Button(onClick = {
               qViewModel.doSetSessionUserFullName("Anonymous");
               qViewModel.manageSession(UUID.randomUUID().toString())
            }) { Text("Log In") }
         }
...
